--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ ul.dash-sb-nav-area {
   font-size: 18px;
 }
 .notify-count {
-  background-color: #2b3282;
+  background-color: var(--theme-color);
   color: white;
   height: 15px;
   width: 15px;
@@ -236,7 +236,7 @@ ul.dash-sb-nav-area {
 .btn:first-child:active,
 :not(.btn-check) + .btn:active {
   color: var(--bs-btn-active-color);
-  background-color: transparent;
+  background-color: #8089961a;
   border-color: transparent;
 }
 .header-profile-btn i {
@@ -376,7 +376,7 @@ nav.breadcrumb-area .breadcrumb {
 .booking-charge-tabel-area,
 .profile-main-area,
 .reviews-area {
-  padding: 25px 25px;
+  padding: 25px 30px;
   background-color: white;
   box-shadow: 0 0 6px 5px #0000001f;
   border-radius: 5px;
@@ -808,6 +808,13 @@ footer {
   border-radius: 4px;
   border: none;
   width: 150px;
+  transition: 0.5s;
+  border: 2px solid var(--theme-color);
+}
+.theme-btn:hover {
+  background-color: transparent;
+  color: var(--sb-title-color);
+  box-shadow: 0 0 7px 2px #00000054;
 }
 .save-cancel-area {
   display: flex;
@@ -915,3 +922,505 @@ img.pro-picture {
 }
 
 /* review screen end  */
+
+
+/* coupns screen start */
+.coupons-gift-main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 40px 0;
+}
+.coupons-gift-area {
+  width: 28%;
+  background: rgb(188,26,37);
+  background: linear-gradient(180deg, rgba(188,26,37,1) 18%, rgba(43,50,130,1) 100%);
+  border-radius: 10px;
+  height: 255px;
+  padding: 25px 30px;
+  position: relative;
+}
+.gift-card-top {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+}
+.gift-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.gift-card-title {
+  font-size: 2.4rem;
+  font-family: var(--Roboto-Regular);
+  color: white;
+}
+.gitf-percent {
+  font-size: 4.8rem;
+  color: white;
+  font-family: var(--Roboto-Medium);
+  line-height: 1.3;
+}
+.gift-name {
+  font-family: var(--Roboto-Regular);
+  font-size: 1.6rem;
+  color: white;
+}
+
+
+/* coupns screen start */
+
+
+
+/* payment screen start */
+
+ul.payment-tabs-btn-area {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+}
+.payment-btn {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Bold);
+  color: #8A92A6;
+  letter-spacing: 0.5px;
+  border-radius: 7px;
+  gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8A92A6;
+  background-color: transparent;
+  padding: 12px 36px 12px 36px;
+}
+.right-circle {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  border: 1px solid #8A92A6;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* --------------------- card css ---------------------- */
+
+.field-container input {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.field-container {
+  position: relative;
+  width: 47%;
+  margin-bottom: 40px;
+}
+
+.form-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #707070;
+}
+
+label.payment-label {
+  font-size: 1.8rem;
+  font-family: var(--Roboto-Bold);
+  color: #8B8B8B;
+  margin-bottom: 3px;
+}
+
+input {
+  margin-top: 3px;
+  padding: 15px;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #dcdcdc;
+}
+
+.ccicon {
+  height: 38px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 8px);
+  width: 60px;
+}
+
+/* CREDIT CARD IMAGE STYLING */
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
+.container-card {
+  width: 100%;
+  max-width: 500px;
+  max-height: 251px;
+  height: 54vw;
+  padding: 0;
+}
+
+#ccsingle {
+  position: absolute;
+  right: 15px;
+  top: 20px;
+}
+
+#ccsingle svg {
+  width: 100px;
+  max-height: 60px;
+}
+
+.creditcard svg#cardfront, .creditcard svg#cardback {
+  width: 100%;
+  -webkit-box-shadow: 1px 5px 6px 0px black;
+  box-shadow: 6px 20px 23px 5px #00000047;
+  border-radius: 22px;
+}
+#generatecard{
+  cursor: pointer;
+  float: right;
+  font-size: 12px;
+  color: #fff;
+  padding: 2px 4px;
+  background-color: #909090;
+  border-radius: 4px;
+  cursor: pointer;
+  float:right;
+}
+
+/* CHANGEABLE CARD ELEMENTS */
+.creditcard .lightcolor,
+.creditcard .darkcolor {
+  -webkit-transition: fill .5s;
+  transition: fill .5s;
+}
+
+.creditcard .lightblue {
+  fill: #03A9F4;
+}
+
+.creditcard .lightbluedark {
+  fill: #0288D1;
+}
+
+.creditcard .red {
+  fill: #ef5350;
+}
+
+.creditcard .reddark {
+  fill: #d32f2f;
+}
+
+.creditcard .purple {
+  fill: #ab47bc;
+}
+
+.creditcard .purpledark {
+  fill: #7b1fa2;
+}
+
+.creditcard .cyan {
+  fill: #26c6da;
+}
+
+.creditcard .cyandark {
+  fill: #0097a7;
+}
+
+.creditcard .green {
+  fill: #66bb6a;
+}
+
+.creditcard .greendark {
+  fill: #388e3c;
+}
+
+.creditcard .lime {
+  fill: #d4e157;
+}
+
+.creditcard .limedark {
+  fill: #afb42b;
+}
+
+.creditcard .yellow {
+  fill: #ffeb3b;
+}
+
+.creditcard .yellowdark {
+  fill: #f9a825;
+}
+
+.creditcard .orange {
+  fill: #ff9800;
+}
+
+.creditcard .orangedark {
+  fill: #ef6c00;
+}
+
+.creditcard .grey {
+  fill: var(--sb-title-color);
+}
+
+.creditcard .greydark {
+  fill: var(--theme-color);
+}
+
+/* FRONT OF CARD */
+#svgname {
+  text-transform: uppercase;
+}
+
+#cardfront .st2 {
+  fill: #FFFFFF;
+}
+
+#cardfront .st3 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
+}
+
+#cardfront .st4 {
+  font-size: 54.7817px;
+}
+
+#cardfront .st5 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+#cardfront .st6 {
+  font-size: 3.3rem;
+  font-family: var(--Roboto-Medium);
+}
+
+#cardfront .st7 {
+  opacity: 0.6;
+  fill: #FFFFFF;
+}
+
+#cardfront .st8 {
+  font-size: 2.4rem;
+  font-family: var(--Roboto-Medium);
+  text-transform: capitalize;
+}
+
+#cardfront .st9 {
+  font-size: 3.6rem;
+  font-family: var(--Roboto-Regular);
+}
+
+#cardfront .st10 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 300;
+}
+
+#cardfront .st11 {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Medium);
+}
+
+#cardfront .st12 {
+  fill: #4C4C4C;
+}
+
+/* BACK OF CARD */
+#cardback .st0 {
+  fill: none;
+  stroke: #0F0F0F;
+  stroke-miterlimit: 10;
+}
+
+#cardback .st2 {
+  fill: #111111;
+}
+
+#cardback .st3 {
+  fill: #F2F2F2;
+}
+
+#cardback .st4 {
+  fill: #D8D2DB;
+}
+
+#cardback .st5 {
+  fill: #C4C4C4;
+}
+
+#cardback .st6 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+}
+
+#cardback .st7 {
+  font-size: 27px;
+}
+
+#cardback .st8 {
+  opacity: 0.6;
+}
+
+#cardback .st9 {
+  fill: #FFFFFF;
+}
+
+#cardback .st10 {
+  font-size: 2.4rem;
+  font-family: var(--Roboto-Medium);
+}
+
+#cardback .st11 {
+  fill: #EAEAEA;
+}
+
+#cardback .st12 {
+  font-family: 'Rock Salt', cursive;
+}
+
+#cardback .st13 {
+  font-size: 3.8rem;
+}
+
+/* FLIP ANIMATION */
+.container-card {
+  perspective: 1000px;
+  margin-bottom: 100px;
+}
+
+.creditcard {
+  width: 100%;
+  max-width: 480px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: -webkit-transform 0.6s;
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
+  cursor: pointer;
+}
+
+.creditcard .front,
+.creditcard .back {
+  position: absolute;
+  width: 100%;
+  max-width: 480px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: antialiased;
+  color: #47525d;
+}
+
+.creditcard .back {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.creditcard.flipped {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.card-area {
+  margin-top: 30px;
+}
+.add-payment-title {
+  font-size: 2rem;
+  font-family: var(--Roboto-Medium);
+  color: var(--sb-title-color);
+  border-top: 1px solid #E3E3E3;
+  border-bottom: 1px solid #E3E3E3;
+  padding: 20px 0;
+  margin-bottom: 30px;
+}
+.payment-method-input {
+  height: 50px;
+  width: 100%;
+  border: 1px solid #BABABA;
+  outline: none;
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: black;
+  padding: 10px 20px;
+}
+.payment-method-input::placeholder {
+  font-size: 1.4rem;
+  font-family: var(--Roboto-Regular);
+  color: #A4A4A4;
+}
+.card-area {
+  display: none;
+}
+.card-area.active {
+  display: block;
+}
+.payment-tabs-btn.active .payment-btn {
+  border: 1px solid #2B3381;
+  color: #2B3381;
+} 
+.payment-tabs-btn.active .right-circle {
+  background-color: #2B3381;
+  color: #2B3381;
+}
+.payment-tabs-btn.active .right-circle i {
+  color: white;
+}
+
+/* payment screen end */
+
+
+
+/* wallet screen start */
+
+.blance-here {
+  font-size: 1.6rem;
+  color: #8A92A6;
+  font-family: var(--Roboto-Bold);
+  line-height: 1.3;
+}
+.show-blance {
+  font-size: 7.2rem;
+  color: var(--theme-color);
+  font-family: var(--Roboto-Bold);
+}
+.wallet-pay-show-area {
+  max-width: 370px;
+  width: 100%;
+  border-radius: 12px;
+  background-color: white;
+  border: 1px solid #E0E0E0;
+  text-align: center;
+  padding: 26px 10px;
+  box-shadow: 0px 4px 45px 0px #0000001F;
+  margin-bottom: 30px;
+}
+
+/* wallet screen end */
+
+
+/* calendar screen start */
+
+#calendar {
+  width: 100%;
+  margin: 0 auto;
+}
+#calendar table td  {
+  padding: 0 !important;
+}
+
+#calendar table.fc-col-header th {
+  padding: 20px 0 !important;
+}
+#calendar table.fc-scrollgrid-section.fc-scrollgrid-section-header th {
+  padding: 0 !important;
+}
+
+/* calendar screen end */
