--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,16 @@
   --theme-color: #2b3282;
   --sb-title-color: #0d233e;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 @font-face {
   font-family: "Roboto-Black";
   src: url(../fonts/Roboto/Roboto-Black.ttf);
@@ -71,6 +80,13 @@ body {
 .dash-left-sidebar::-webkit-scrollbar {
   width: 5px;
 }
+.dash-nav-link.active .nav-link.bg {
+  background-color: var(--theme-color);
+  color: white !important;
+}
+.dash-nav-link.active .nav-link.bg i {
+  color: white !important;
+}
 
 /* Track */
 .dash-left-sidebar::-webkit-scrollbar-track {
@@ -118,9 +134,6 @@ a.nav-link i {
 li.dash-nav-link {
   margin-bottom: 2px;
 }
-ul.dash-sb-nav-area {
-  margin-left: 35px;
-}
 i.fa-solid.fa-angle-down.sider-angle-down {
   font-size: 1.4rem;
   position: absolute;
@@ -128,9 +141,18 @@ i.fa-solid.fa-angle-down.sider-angle-down {
 }
 ul.dash-sb-nav-area {
   display: none;
+  margin-left: 35px;
+  margin-top: 5px;
 }
 .dash-nav-link.active ul.dash-sb-nav-area {
   display: block;
+}
+.nav-link.active i {
+  color: white !important;
+}
+.nav-link.active {
+  background-color: var(--theme-color);
+  color: white;
 }
 
 /* side bar end */
@@ -376,7 +398,7 @@ nav.breadcrumb-area .breadcrumb {
 .booking-charge-tabel-area,
 .profile-main-area,
 .reviews-area {
-  padding: 25px 30px;
+  padding: 25px 30px 30px;
   background-color: white;
   box-shadow: 0 0 6px 5px #0000001f;
   border-radius: 5px;
@@ -393,7 +415,7 @@ nav.breadcrumb-area .breadcrumb {
 .section-sb-title {
   font-size: 2.2rem;
   font-family: var(--Roboto-Medium);
-  color: var(--theme-color);
+  color: var(--sb-title-color);
 }
 .section-sb-title-area {
   display: flex;
@@ -453,7 +475,7 @@ table.theme-tabel td {
   font-family: var(--Roboto-Regular);
   color: var(--sb-title-color) !important;
   border-bottom: 2px solid #d7d7d9;
-  padding: 10px 0px 7px 20px !important;
+  padding: 15px 0px 15px 20px !important;
 }
 table.theme-tabel th,
 td {
@@ -703,7 +725,7 @@ footer {
 
 /* my-booking screen start */
 .section-main-title.theme-color {
-  color: var(--sb-title-color);
+  color: var(--theme-color);
 }
 
 /* my-booking screen end */
@@ -817,10 +839,13 @@ footer {
   box-shadow: 0 0 7px 2px #00000054;
 }
 .save-cancel-area {
-  display: flex;
+  display: none;
   align-items: center;
   gap: 10px;
   justify-content: start;
+}
+.save-cancel-area.active {
+  display: flex;
 }
 .profile-inner-right {
   margin-top: 20px;
@@ -871,6 +896,13 @@ img.pro-picture {
   font-family: var(--Roboto-Regular);
   color: #a4a4a4;
 }
+button.edit-profile-btn:disabled {
+  background-color: #2b32821c;
+  color: var(--sb-title-color);
+  border-color: #2b32821c;
+}
+
+
 
 /* profile screen end */
 
@@ -1522,4 +1554,288 @@ input {
   position: absolute;
   background-color: black;
 } */
+
+
+
 /* calendar screen end */
+
+
+/* popup css start */
+
+.booking-popup-wrap, .rental-popup-wrap {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% , -50%);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.booking-popup-wrap.active {
+  display: flex;
+}
+.rental-popup-wrap.active {
+  display: flex;
+}
+.booking-popup-main {
+  background-color: white;
+  max-width: 580px;
+  width: 100%;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 0 16px 14px #00000014;
+}
+.pop-pro-img {
+  height: 50px;
+  width: 50px;
+  border-radius: 10px;
+}
+.name-pro-area .name {
+  font-size: 2rem;
+  font-family: var(--Roboto-Medium);
+  color: black;
+}
+.popup-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.name-pro-area {
+  display: flex;
+  justify-content: start;
+  gap: 15px;
+  align-items: center;
+}
+.pop-cls-btn {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #00000080;
+  font-size: 2rem;
+}
+.pop-field-name {
+  font-size: 1.8rem;
+  color: black;
+  font-family: var(--Roboto-Medium);
+  opacity: 50%;
+  margin-bottom: 5px;
+}
+.popup-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.popup-fields-area {
+  width: 47%;
+  margin-top: 25px;
+}
+.pop-field-input {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: var(--sb-title-color);
+  height: 50px;
+  padding: 10px 10px;
+  border: 1px solid #00000063;
+  border-radius: 2px;
+  outline: none;
+}
+.form-select.pop-field-input:focus {
+  border-color: #00000063;
+  outline: none;
+  box-shadow: unset;
+}
+.pop-field-input::placeholder {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: var(--sb-title-color);
+}
+.field-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: black;
+  font-size: 1.6rem;
+}
+.popup-btm {
+  margin-top: 40px;
+}
+.theme-btn.cancel {
+  background-color: transparent;
+  color: #BC1A25;
+  transition: 0.5s;
+  border: 2px solid #BC1A25;
+}
+.popup-btm {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 10px;
+}
+
+/* popup css end */
+
+
+
+/* booking detail screen start */
+.bookin-map {
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+.booking-detail-img {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+.book-detail-name {
+  font-size: 2.8rem;
+  font-family: var(--Roboto-Medium);
+  color: var(--sb-title-color);
+  margin-bottom: 3px;
+}
+.booking-user-detail-main {
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: 0 0 10px 5px #0000002b;
+  padding: 25px;
+  margin-top: 40px;
+}
+.booking-user-top-area {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: start;
+}
+.booking-user-top-area .fa-star {
+  font-size: 1.2rem;
+}
+.detail-title {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: black;
+  margin-bottom: 8px;
+  display: block;
+}
+.booking-detail-text {
+  font-size: 1.4rem;
+  font-family: var(--Roboto-Regular);
+  color: var(--sb-title-color);
+  opacity: 80%;
+  line-height: 1.3;
+}
+.booking-detail-area {
+  margin-top: 25px;
+}
+.flex-area {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 0 10px;
+}
+.flex-area .booking-detail-area {
+  width: 42%;
+}
+.user-driver-booking {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.user-driver-booking .user-driver-booking-inner {
+  width: 49%;
+}
+.booking-user-top-area.mb-45px {
+  margin-bottom: 45px;
+}
+/* booking detail screen end */
+
+
+
+/* vehicle screen start */
+.vehicles-listing-area {
+  background-color: white;
+  border-radius: 20px;
+  padding: 10px 30px;
+  box-shadow: 0 0 10px 4px #0000001a;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 35px;
+  height: 220px;
+}
+.vehicle-name {
+  font-size: 4rem;
+  color: black;
+  font-family: var(--Roboto-Medium);
+  margin-bottom: 5px;
+}
+.vehicle-detail {
+  font-size: 2.3rem;
+  font-family: var(--Roboto-Regular);
+  color: black;
+  line-height: 1.2;
+}
+.vehicle-price {
+  font-size: 6rem;
+  font-family: var(--Roboto-Medium);
+  color: var(--theme-color);
+  margin-bottom: 3px;
+}
+.per-day {
+  font-size: 2.6rem;
+  font-family: var(--Roboto-Regular);
+  color: black;
+  opacity: 80%;
+  display: block;
+}
+.vehicle-listing-left {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 100px;
+  width: 80%;
+}
+.vehicle-img {
+  width: 100%;
+  max-width: 320px;
+}
+img.img-fluid.vehicle-lis-img {
+  max-width: 320px;
+  width: 100%;
+  max-height: 180px;
+  height: 100%;
+  border-radius: 10px;
+}
+/* vehicle screen end  */
+
+
+/* payment detail screen start */
+.payment-detail-main-area {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.payment-detail-inner {
+  width: 48.6%;
+}
+.payment-detail-map {
+  border-radius: 20px;
+  box-shadow: 0 0 10px 5px #00000012;
+}
+.payment-detail-inner.left {
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: 0 0 10px 5px #00000012;
+  padding: 50px;
+  height: 750px;
+}
+/* payment detail screen end */
